--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,20 @@ asgiref==3.3.4
     # via django
 bcrypt==3.2.0
     # via paramiko
+certifi==2020.12.5
+    # via requests
 cffi==1.14.5
     # via
     #   bcrypt
     #   cryptography
     #   pynacl
+chardet==4.0.0
+    # via requests
 coverage==5.5
+    # via
+    #   -r requirements.in
+    #   coveralls
+coveralls==3.0.1
     # via -r requirements.in
 cryptography==3.4.7
     # via paramiko
@@ -31,12 +39,16 @@ django==3.2
     #   djangorestframework
 djangorestframework==3.12.4
     # via -r requirements.in
+docopt==0.6.2
+    # via coveralls
 fabric==2.6.0
     # via
     #   -r requirements.in
     #   patchwork
 faker==8.1.0
     # via django-seed
+idna==2.10
+    # via requests
 invoke==1.5.0
     # via fabric
 paramiko==2.7.2
@@ -53,6 +65,8 @@ python-dateutil==2.8.1
     # via faker
 pytz==2021.1
     # via django
+requests==2.25.1
+    # via coveralls
 six==1.15.0
     # via
     #   bcrypt
@@ -63,3 +77,5 @@ sqlparse==0.4.1
     # via django
 text-unidecode==1.3
     # via faker
+urllib3==1.26.4
+    # via requests
